<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quotes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_quote">Add Quote</string>
    <string name="action_save_quote">Save</string>
    <string name="activity_add">Add Quote</string>
    <string name="activity_detail">Quote</string>
    <string name="quote_hint">Quote</string>
    <string name="source_hint">Source</string>
    <string name="name_hint">Speaker Name</string>
    <string name="access_icon_name">image_icon</string>
    <string name="empty_listview">No stored quotes, add one!</string>
    <string name="testQuote"><![CDATA[&quot;I\'m not crazy, my mother had me tested &quot;]]></string>
    <string name="testSource">The Big Bang Theory</string>
    <string name="testAuthor"> - Dr. Sheldon Cooper</string>
    <string name="list_item_delete">Delete Quote</string>
    <string name="dialog_confirm_title">Delete Quote?</string>
    <string name="dialog_confirm_mesage">Are you sure you want to delete this quote?</string>

</resources>
