<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textCapWords|textPersonName"
        android:hint="@string/name_hint"
        android:ems="10"
        android:id="@+id/add_name_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textCapWords|textPersonName"
        android:hint="@string/source_hint"
        android:ems="10"
        android:id="@+id/add_source_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_quote_text"
        android:hint="@string/quote_hint"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:inputType="text|textCapSentences" />
</LinearLayout>