<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_color">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:id="@+id/image_icon"
            android:contentDescription="@string/access_icon_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image_icon"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:textColor="#ffffffff" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_add"
            android:id="@+id/launch_add_activity"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:layout_margin="10dp"
            android:minHeight="15dp"
            android:minWidth="15dp" />
        <ListView
            android:id="@+id/widget_quote_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_icon"
            android:background="@color/lt_blue_color"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/empty"
            android:layout_below="@id/image_icon"
            android:text="@string/empty_listview"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

</RelativeLayout>